base/monitoring/tools-server/node-exporter/networkpolicies/prometheus-egress-tools-server-node-exporter.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-tools-server-node-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toFQDNs:
        - matchName: tools.srv.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "9100" # prometheus node exporter
              protocol: TCP
