base/monitoring/tools-server/node-exporter/networkpolicies/tools-server-node-exporter-egress-prometheus.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: tools-server-node-exporter-egress-prometheus
  namespace: monitoring
spec:
  selector: app.kubernetes.io/instance == 'kube-prometheus-stack-prometheus'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - 10.0.0.4/32
        ports:
          - 9100  # prometheus node-exporter
